[gd_scene load_steps=32 format=3 uid="uid://mr311kda2j1e"]

[ext_resource type="Script" uid="uid://c7ao4m0j28bv8" path="res://scenes/characters/player/player.gd" id="1_7uws0"]
[ext_resource type="Texture2D" uid="uid://c85e5x0m341bu" path="res://assets/graphics/player/small-kine-surf-surfer-sheet.png" id="2_42irl"]
[ext_resource type="Script" uid="uid://cm7wyyr0e8268" path="res://scenes/characters/player/player_ready_state.gd" id="2_qd3e3"]
[ext_resource type="Script" uid="uid://uuwi2n4u8d3e" path="res://scenes/characters/player/player_surf_state.gd" id="3_6avc5"]
[ext_resource type="Script" uid="uid://s4fstfmo27af" path="res://scenes/characters/player/player_sprite_2d.gd" id="3_djydg"]
[ext_resource type="Script" uid="uid://bgct7klxxdjp7" path="res://scripts/components/limbo_hsm_state.gd" id="3_mk55u"]
[ext_resource type="Script" uid="uid://8hbsdxlgmdrr" path="res://scenes/characters/player/player_hsm.gd" id="4_42irl"]
[ext_resource type="Shader" uid="uid://beukmo0o72dhv" path="res://shaders/silhouette.gdshader" id="4_bsn6e"]
[ext_resource type="Script" uid="uid://hdalbpoph40t" path="res://scenes/characters/player/air_state.gd" id="4_mk55u"]
[ext_resource type="Script" uid="uid://dht86umxctm0i" path="res://scenes/characters/player/player_tube_state.gd" id="5_xuses"]
[ext_resource type="PackedScene" uid="uid://dqe0a04buchn5" path="res://scenes/characters/player/player_sfx.tscn" id="6_ykrpk"]
[ext_resource type="Material" uid="uid://dygiek3duj0ft" path="res://scenes/characters/player/player_water_spray.tres" id="8_xuses"]
[ext_resource type="Script" uid="uid://tg0lvrjq68jg" path="res://scenes/characters/player/player_wipeout_state.gd" id="10_3xnwo"]
[ext_resource type="Script" uid="uid://e030x1yo74k2" path="res://scenes/characters/player/player_exit_bottom_state.gd" id="13_hv5x3"]
[ext_resource type="Script" uid="uid://de37jk776dvfg" path="res://scenes/characters/player/player_exit_shoulder_state.gd" id="14_ykrpk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7uws0"]
size = Vector2(53, 45)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blysn"]
shader = ExtResource("4_bsn6e")
shader_parameter/silhouette_color = Color(0, 0, 0, 0.5)

[sub_resource type="Animation" id="Animation_42irl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_v")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_3xnwo"]
resource_name = "surf_0"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, -22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_v")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_bsn6e"]
resource_name = "surf_180"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_v")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_blysn"]
resource_name = "surf_270"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -19)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_djydg"]
resource_name = "surf_90"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_hv5x3"]
resource_name = "wipeout"
length = 1.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.1, 1.2, 1.3000001, 1.4000001, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 20, 21, 22, 23, 18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.1, 1.1000935, 1.1001093, 1.2000934),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -27), Vector2(0, -126), Vector2(0, -25), Vector2(0, 0), Vector2(0, -26), Vector2(0, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_djydg"]
_data = {
&"RESET": SubResource("Animation_42irl"),
&"surf_0": SubResource("Animation_3xnwo"),
&"surf_180": SubResource("Animation_bsn6e"),
&"surf_270": SubResource("Animation_blysn"),
&"surf_90": SubResource("Animation_djydg"),
&"wipeout": SubResource("Animation_hv5x3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42irl"]
animation = &"surf_0"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3xnwo"]
animation = &"surf_180"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_djydg"]
blend_point_0/node = SubResource("AnimationNodeAnimation_42irl")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_3xnwo")
blend_point_1/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_djydg"]
animation = &"wipeout"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bsn6e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bsn6e"]
states/surfing/node = SubResource("AnimationNodeBlendSpace1D_djydg")
states/surfing/position = Vector2(305.6667, -27)
states/wipeout/node = SubResource("AnimationNodeAnimation_djydg")
states/wipeout/position = Vector2(507.6667, 14.333336)
transitions = ["Start", "surfing", SubResource("AnimationNodeStateMachineTransition_bsn6e")]
graph_offset = Vector2(-375, -113)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk55u"]
size = Vector2(52, 11)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_7uws0")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(12.5, -22.5)
shape = SubResource("RectangleShape2D_7uws0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(10, -26)
texture = ExtResource("2_42irl")
hframes = 4
vframes = 5
script = ExtResource("3_djydg")

[node name="Silhouette" type="Sprite2D" parent="Sprite2D"]
z_index = 100
material = SubResource("ShaderMaterial_blysn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_djydg")
}
autoplay = "surf_0"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_bsn6e")
anim_player = NodePath("../AnimationPlayer")
parameters/surfing/blend_position = 0.9959705

[node name="LimboHsmState" type="Label" parent="." node_paths=PackedStringArray("limbo_hsm")]
offset_left = -64.0
offset_top = -78.0
offset_right = 87.0
offset_bottom = -55.0
text = "STATE"
horizontal_alignment = 1
script = ExtResource("3_mk55u")
limbo_hsm = NodePath("../PlayerHSM")

[node name="BoardArea" type="Area2D" parent="."]

[node name="BoardCollision" type="CollisionShape2D" parent="BoardArea"]
position = Vector2(12, -5.5)
shape = SubResource("RectangleShape2D_mk55u")

[node name="PlayerSFX" parent="." instance=ExtResource("6_ykrpk")]

[node name="SprayVFX" type="GPUParticles2D" parent="."]
emitting = false
amount = 255
amount_ratio = 0.5
lifetime = 0.5
process_material = ExtResource("8_xuses")

[node name="PlayerHSM" type="LimboHSM" parent="."]
script = ExtResource("4_42irl")

[node name="ReadyState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("2_qd3e3")

[node name="SurfState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("3_6avc5")

[node name="AirState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("4_mk55u")

[node name="TubeState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("5_xuses")

[node name="WipeoutState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("10_3xnwo")

[node name="ExitBottomState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("13_hv5x3")

[node name="ExitShoulderState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("14_ykrpk")
